--- a/pages/index.css
+++ b/pages/index.css
@@ -197,6 +197,7 @@
     gap: 32px;
     position: relative;
     width: 30%;
+    text-decoration: none;
 }
 .uydek-card:hover {
     box-shadow: 0 4px 16px rgba(60, 100, 200, 0.10);
