--- a/pages/rent.css
+++ b/pages/rent.css
@@ -1,5 +1,4 @@
 .listings-container {
-  margin-top: 32px;
   margin-bottom: 32px;
 }
 
@@ -9,17 +8,19 @@
 }
 .filter-row {
   display: flex;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   gap: 12px;
   margin-bottom: 10px;
   justify-content: space-between;
-  /* overflow-x: scroll; */
+  overflow-x: scroll;
+  border-radius: 20px;
+
 }
 .filter-btn {
   background: #fff;
   border: none;
   border-radius: 100px;
-  padding: 12px 24px;
+  padding: 1px 24px;
   font-size: 16px;
   font-weight: 400;
   color: #5A83ED99;
@@ -462,6 +463,25 @@
   font-weight: 600;
   color: #222;
 }
+@media (max-width: 992px) {
+  .listing-img-wrap{
+    min-width: 230px;
+    max-width: 230px;
+    height: 230px;
+  }
+  
+}
+@media (max-width: 769px) {
+  .listing-card{
+    flex-direction: column;
+  }
+  .listing-img-wrap{
+    min-width: 100%;
+    max-width: 100%;
+    height: 230px;
+  }
+    
+}
 @media (max-width: 700px) {
   .rent-filter-row {
     gap: 6px;
@@ -497,7 +517,6 @@
 }
 @media (max-width: 700px) {
   .listings-container {
-    margin-top: 12px;
     margin-bottom: 12px;
   }
   .listings-filters {
@@ -513,19 +532,21 @@
   }
   .listing-card {
     flex-direction: column;
-    padding: 10px 6px;
+    padding: 15px 15px;
     gap: 10px;
   }
   .listing-img-wrap {
     min-width: 100%;
     max-width: 100%;
-    height: 140px;
+    height: 240px;
   }
   .listing-price {
-    text-align: left;
     margin-left: 0;
     font-size: 20px;
     margin-top: 8px;
+    top: 250px;
+    right: 10px;
+    text-align: end;
   }
   .map-block {
     padding: 4px;
